// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextAreaField rendering renders expected elements 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
  required={true}
>
  <TextAreaField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    required={true}
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<FieldWrapper
  className="TextAreaField TestClass"
  counter={null}
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <TextAreaField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when showCounter is set 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter="5/10"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <TextAreaField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <TextAreaField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value=""
  />
</FieldWrapper>
`;
